[gd_scene load_steps=5 format=3 uid="uid://bma1jmqnomnw0"]

[ext_resource type="Script" path="res://Scenes/towers/igloo_tower.gd" id="1_mwr64"]
[ext_resource type="Texture2D" uid="uid://dkxp4nnux1mka" path="res://Assets/sprites/iglooCannon.png" id="2_r0owp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xnja"]
size = Vector2(126, 103)

[sub_resource type="CircleShape2D" id="CircleShape2D_nh4v1"]
radius = 400.0

[node name="iglooTower" type="StaticBody2D"]
script = ExtResource("1_mwr64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 0.5)
shape = SubResource("RectangleShape2D_0xnja")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(73, 0)

[node name="IglooCannon" type="Sprite2D" parent="."]
scale = Vector2(0.17, 0.17)
texture = ExtResource("2_r0owp")

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_nh4v1")

[node name="BulletContainer" type="Node" parent="."]

[node name="FiringTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_BulletTimer_timeout"]
